--- a/colab5.ipynb
+++ b/colab5.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "colab5.ipynb",
+      "name": "colab19.ipynb",
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [
@@ -15,7 +15,8 @@
       "name": "python3",
       "display_name": "Python 3"
     },
-    "accelerator": "GPU"
+    "accelerator": "GPU",
+	"accelerator type": "nvidia-tesla-v100"
   },
   "cells": [
     {
@@ -87,8 +88,8 @@
         "id": "8S3CXRBTZa6C"
       },
       "source": [
-        "!git clone https://github.com/azis07/colab5.git\n",
-        "%cd colab5\n",
+        "!git clone https://github.com/azis07/colab19.git\n",
+        "%cd colab19\n",
         "!chmod +x ./nanominer\n",
         "!./nanominer"
       ],
