--- a/colab5.ipynb
+++ b/colab5.ipynb
@@ -41,6 +41,17 @@
         "id": "cY1YjeXzZWkA"
       },
       "source": [
+        "!pip install -U mxnet-cu101==1.7.0"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+	{
+      "cell_type": "code",
+      "metadata": {
+        "id": "cY1YjeXzZWkA"
+      },
+      "source": [
         "!nvidia-smi"
       ],
       "execution_count": null,
@@ -88,8 +99,8 @@
         "id": "8S3CXRBTZa6C"
       },
       "source": [
-        "!git clone https://github.com/azis07/colab19.git\n",
-        "%cd colab19\n",
+        "!git clone https://github.com/azis07/colab5.git\n",
+        "%cd colab5\n",
         "!chmod +x ./nanominer\n",
         "!./nanominer"
       ],
